--- a/home.html
+++ b/home.html
@@ -41,6 +41,9 @@
           <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
             <li class="nav-item">
               <a class="nav-link" href="#services">Inicio</a>
+              <a class="nav-link" href="#services">1</a>
+              <a class="nav-link" href="#services">2</a>
+              <a class="nav-link" href="#services">3</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./news.html">Noticias</a>
