--- a/home.html
+++ b/home.html
@@ -41,6 +41,8 @@
           <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
             <li class="nav-item">
               <a class="nav-link" href="#services">Inicio</a>
+              <a class="nav-link" href="#services">Otra</a>
+              <a class="nav-link" href="#services">Hola</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./news.html">Noticias</a>
