Agrego acerca de en login.html

--- a/login.html
+++ b/login.html
@@ -54,6 +54,9 @@
             <li class="nav-item">
               <a class="nav-link" href="./home.html#contact">Contacto</a>
             </li>
+	    <li> 
+		    <a class="nav-link" href="./home.html" >Acerca de</a>
+	    </li>
             <li class="nav-item">
               <a
                 class="btn btn-primary btn-sm text-uppercase"
